upgrade to new connector, added npm stop to bootstrap use cases

--- a/apim-system/local/docker-compose.yml
+++ b/apim-system/local/docker-compose.yml
@@ -30,7 +30,7 @@ services:
       - AUTH_VERIFICATION_ISSUER=${AUTH_VERIFICATION_ISSUER}
       - AUTH_VERIFICATION_AUD=${AUTH_VERIFICATION_AUD}
       - AUTH_DISCOVERY_OIDC_URL=${AUTH_DISCOVERY_OIDC_URL}
-      - APIS_PROXY_MODE=${APIS_PROXY_MODE}
+      # - APIS_PROXY_MODE=${APIS_PROXY_MODE}
       # - ADMIN_USER=${ADMIN_USER}
       # - ADMIN_PASSWORD=${ADMIN_PASSWORD}
   demo-portal-server:
