--- a/use-cases/car-co/bootstrap/package.json
+++ b/use-cases/car-co/bootstrap/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "prestart": "tsc",
     "start": "node dist/index.js",
+    "stop": "tsc && node dist/stop.js",
     "test": "npm start",
     "dev": "nodemon src/index.ts"
   },
@@ -18,16 +19,16 @@
   ],
   "license": "MIT",
   "dependencies": {
-    "@solace-iot-team/platform-api-openapi-client": "^0.2.6",
+    "@solace-iot-team/platform-api-openapi-client": "^0.2.9",
     "js-yaml": "^4.0.0",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
     "@types/js-yaml": "^4.0.0",
     "@types/lodash": "^4.14.168",
-    "@types/node": "^14.14.37",
+    "@types/node": "^16.9.6",
     "nodemon": "^2.0.7",
-    "ts-node": "^9.1.1",
+    "ts-node": "^10.2.1",
     "typescript": "^4.2.3"
   }
 }
