--- a/use-cases/acme-retail/central-it/till-system/AcmeRetail-Central-IT-Provider-TillSystem-v1.yml
+++ b/use-cases/acme-retail/central-it/till-system/AcmeRetail-Central-IT-Provider-TillSystem-v1.yml
@@ -1,7 +1,7 @@
 asyncapi: '2.4.0'
-id: urn:com:acme:retail:provider:till-system:receipts
+id: urn:com:acme-retail:central-it:provider:till-system
 info:
-  title: AcmeRetail-CentralIT-TillSystem-v1
+  title: AcmeRetail-Central-IT-Provider-TillSystem-v1
   version: '1.0.2'
   description: |
     Provider Service API for the Central IT Till System.
@@ -17,7 +17,7 @@ defaultContentType: application/json
 
 channels:
 
-  catalyst-labs/acme/retail/till-system/v1/{storeId}/receipt:
+  catalyst-labs/acme-retail/till-system/v1/{storeId}/receipt:
     description: The topic to receive till receipts from stores on.
     parameters:
       storeId:
@@ -26,6 +26,7 @@ channels:
       summary: Receive till receipts from stores.
       operationId: receiveStoreTillReceipts
       message:
+        # x-parser-message-name: storeTillReceipt
         $ref: '#/components/messages/storeTillReceipt'
 
 components:
