--- a/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml
+++ b/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml
@@ -4,6 +4,10 @@
     errorId:
       type: string
       description: The Error Id.
+    errorDescription:
+      type: string
+    errorDetails:
+      type: object  
     transactionId:
       type: string
       description: The transaction id.
