--- a/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml
+++ b/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml
@@ -7,7 +7,7 @@
     errorDescription:
       type: string
     errorDetails:
-      type: object  
-    transactionId:
+      type: object
+    originalTransactionId:
       type: string
-      description: The transaction id.
+      description: The original transaction id the error refers to.
