--- a/use-cases/acme-retail/central-it/till-system/AcmeRetail-Central-IT-Provider-TillSystem-v1.yml
+++ b/use-cases/acme-retail/central-it/till-system/AcmeRetail-Central-IT-Provider-TillSystem-v1.yml
@@ -2,7 +2,7 @@ asyncapi: '2.4.0'
 id: urn:com:acme-retail:central-it:provider:till-system
 info:
   title: AcmeRetail-Central-IT-Provider-TillSystem-v1
-  version: '1.0.2'
+  version: '1.1.0'
   description: |
     Provider Service API for the Central IT Till System.
 
@@ -29,8 +29,21 @@ channels:
         # x-parser-message-name: storeTillReceipt
         $ref: '#/components/messages/storeTillReceipt-v1'
 
+  catalyst-labs/acme-retail/till-system/v1/{storeId}/error:
+    description: The topic to send errors as response to a transaction on.
+    parameters:
+      storeId:
+        $ref: '#/components/parameters/storeId'
+    subscribe:
+      summary: Send errors to store for transaction.
+      operationId: sendStoreTillSystemError
+      message:
+        # x-parser-message-name: storeTillReceipt
+        $ref: '#/components/messages/storeTillSystemError-v1'
+
 components:
   messages:
+
     storeTillReceipt-v1:
       name: storeTillReceipt-v1
       title: Store Till Receipt
@@ -40,6 +53,13 @@ components:
       #   - $ref: '#/components/messageTraits/commonHeaders'
       payload:
         $ref: "#/components/schemas/storeTillReceipt-v1"
+
+    storeTillSystemError-v1:
+      name: storeTillSystemError-v1
+      title: Till System Error for transaction.
+      contentType: application/json
+      payload:
+        $ref: "#/components/schemas/storeTillSystemError-v1"
 
   schemas:
     storeTillReceipt-v1:
@@ -69,6 +89,15 @@ components:
         - quantity
         - price
         - currency
+
+    storeTillSystemError-v1:
+      type: object
+      properties:
+        payload:
+          $ref: "https://raw.githubusercontent.com/solace-iot-team/solace-apim-reference-designs/main/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml"
+        header:
+          $ref: "https://raw.githubusercontent.com/solace-iot-team/solace-apim-reference-designs/main/use-cases/acme-retail/central-it/schemas/CommonHeader.v1.yml"
+
 
   # securitySchemes:
   #   saslScram:
