added storeId to header

--- a/use-cases/acme-retail/central-it/schemas/CommonHeader.v1.yml
+++ b/use-cases/acme-retail/central-it/schemas/CommonHeader.v1.yml
@@ -8,3 +8,10 @@
     transactionId:
       type: string
       description: The transaction id.
+    storeId:
+      type: string
+      description: The store id.
+    required:
+      - sentAt
+      - transactionId
+      - storeId
