--- a/use-cases/acme-retail/central-it/till-system/AcmeRetail-Central-IT-Provider-TillSystem-v1.yml
+++ b/use-cases/acme-retail/central-it/till-system/AcmeRetail-Central-IT-Provider-TillSystem-v1.yml
@@ -1,8 +1,9 @@
 asyncapi: '2.4.0'
 id: urn:com:acme-retail:central-it:provider:till-system
+# ep application domain: acme-retail:central-it:provider:till-system
 info:
   title: AcmeRetail-Central-IT-Provider-TillSystem-v1
-  version: '1.1.1'
+  version: '1.2.0'
   description: |
     Provider Service API for the Central IT Till System.
 
