--- a/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml
+++ b/use-cases/acme-retail/central-it/schemas/storeTillSystemErrorPayload-v1.yml
@@ -11,3 +11,7 @@
     originalTransactionId:
       type: string
       description: The original transaction id the error refers to.
+  required:
+    - errorId
+    - errorDescription
+    - originalTransactionId
